--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -4,8 +4,11 @@
 name: Python application
 
 on:
+  push:
+    branches:
+      - master
   schedule:
-    - cron: '0 3 * * *'
+    - cron: '0 2 * * *'
 
 jobs:
   build:
